# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  request.ChangePasswordReq:
+    properties:
+      confirmPassword:
+        description: 新密码
+        type: string
+      password:
+        description: 旧密码
+        type: string
+    type: object
   request.ChangeUserInfo:
     properties:
       Mobile:
@@ -468,6 +477,34 @@ paths:
       summary: jwt加入黑名单
       tags:
       - Jwt
+  /user/changePassword:
+    post:
+      parameters:
+      - description: 用户名, 原密码, 新密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ChangePasswordReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 用户修改密码
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: boolean
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 用户修改密码
+      tags:
+      - SysUser
   /user/getUserInfo:
     get:
       consumes:
@@ -509,7 +546,7 @@ paths:
               type: object
       summary: 退出登录
       tags:
-      - Base
+      - SysUser
   /user/setUserInfo:
     put:
       consumes:
