# router/system/sys_user.go
@@ -12,8 +12,9 @@ func (u *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	baseApi := v1.ApiGroupApp.SystemApiGroup.BaseApi
 
 	{
-		userRouter.PUT("setUserInfo", baseApi.SetUserInfo) // 设置用户信息
-		userRouter.GET("getUserInfo", baseApi.GetUserInfo) // 获取用户信息
-		userRouter.GET("logout", baseApi.Logout)           // 退出登录
+		userRouter.PUT("setUserInfo", baseApi.SetUserInfo)        // 设置用户信息
+		userRouter.GET("getUserInfo", baseApi.GetUserInfo)        // 获取用户信息
+		userRouter.GET("logout", baseApi.Logout)                  // 退出登录
+		userRouter.POST("changePassword", baseApi.ChangePassword) // 修改密码
 	}
 }
